# netwatch

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
examples/: tmux.conf.snippet
hooks/: hooks.json
src/netwatch/: __init__.py  __main__.py
src/netwatch/cli/: broadcast.py  daemon_ctl.py  doctor.py  install.py  jump.py  peek.py  pick.py  spawn.py  status.py  tail.py  uninstall.py
src/netwatch/common/: paths.py  socket_client.py
src/netwatch/daemon/: __main__.py  aggregator.py  hook_receiver.py  jsonl_watcher.py  socket_server.py  state.py  tmux_watcher.py
src/netwatch/hud/: __main__.py  app.py
src/netwatch/hud/styles/: netrunner.tcss
src/netwatch/sidebar/: __main__.py
src/netwatch/themes/: default.toml  netrunner.toml
tests/: conftest.py  test_aggregator.py  test_hook_receiver.py  test_jsonl_watcher.py  test_socket_server.py  test_state.py
