[project]
name = "netwatch"
version = "0.4.1"
description = "Cyberpunk-themed tmux agent dashboard for Claude Code and friends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Eoin O'Flanagan", email = "eoin.oflanagan@databricks.com" },
]
keywords = ["tmux", "claude", "agent", "dashboard", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
dependencies = [
    "libtmux>=0.55.0",
    "textual>=3.0.0",
    "watchdog>=6.0.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "typer[all]>=0.15.0",
    "structlog>=25.1.0",
]

[project.urls]
Homepage = "https://github.com/e01n0/netwatch"
Repository = "https://github.com/e01n0/netwatch"
Issues = "https://github.com/e01n0/netwatch/issues"

[project.scripts]
netwatch = "netwatch.__main__:app"
netwatchd = "netwatch.daemon.__main__:main"
"netwatch-hud" = "netwatch.hud.__main__:main"
"netwatch-sidebar" = "netwatch.sidebar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netwatch"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
